objects/CMPL123QMS__Supplier_User_Onboarding_Junction__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Child_Objects__c</fullName>
        <label>Child Objects</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Errors__c</fullName>
        <label>Errors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Supplier_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Site</label>
        <referenceTo>CMPL123QMS__Supplier_Site__c</referenceTo>
        <relationshipName>Supplier_Users_Onboarding_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_Users_Onboarding_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supplier User Onboarding</label>
    <nameField>
        <displayFormat>SUOJ-{00000}</displayFormat>
        <label>Supplier User Onboarding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Users Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>